src/components/FactoryGame.scss
@import "./_constants";

body {
  background-color: #222;
}

.App {
  margin: 0 auto 5px;
}

.factory-game {
  font-size: 0;
  background-color: $bgColor;
  position: relative;
}

.main-bus-header {
  background-color: #526b83;
  width: 400px;
  height: 100px;
  display: flex;
  justify-content: flex-end;
  border-left: 2px solid #222;

  .add-lane-button {
    font-size: 16px;
    color: black;
    cursor: pointer;
    user-select: none;
    width: 80px;
    height: 32px;
    text-align: center;
    line-height: 32px;
    margin: auto 0;
  }

  .belt-count {
    font-size: 22px;
    color: black;
    line-height: 20px;
  }

  .main-bus-segment {
    height: 70px;
  }

  .add-new {
    width: 35px;
    height: 50px;
    margin: 24px 8px 0;
    font-size: 16px;
  }
}

.lane-header-counts {
  display: flex;
  .icon {
    transform: scale(0.35);
    margin: -6px;
  }
  cursor: pointer;
  user-select: none;
}

.lane-header-item-stack {
  width: 35px;
  height: 50px;
  //background-color: $bgColor;
  > * {
    pointer-events: none;
  }
}

.top-bar {
  display: flex;
  background: lightblue;
}

.help-icon {
  color: #444;
  margin: auto 10px;
  cursor: pointer;
}

.main-bus-segment {
  height: ($cardHeight + $inserterCardHeight + 2);
  width: 400px;
}

.info-header {
  display: flex;
  line-height: 12px;
  font-size: 12px;
  vertical-align: middle;
  align-items: flex-start;
  width: $appWidth;
  z-index: 1;
  background-color: #526b83;
  padding-top: 20px;

  .icon {
    transform: scale(0.5);
    margin: -16px;
  }
  .top-info {
    margin-right: 12px;
  }
  .ore-text {
    display: inline-block;
  }
  .science-info {
    margin-left: auto;
  }
}

.recipe-selector {
  width: 650px;
  background: lightgrey;
  border: 2px black solid;
  z-index: 1;
  padding: 10px;
  .title {
    font-size: 24px;
    line-height: 1;
    color: black;
    //    margin: auto;
    padding-left: 12px;
    height: 100%;
    vertical-align: top;
  }
  .recipe-list {
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    align-items: flex-start;
    .icon {
      box-sizing: border-box;
      border-color: lightgrey;
      margin: 2px;
      //border: 1px red solid;
      //transform: scale(0.8);
      //margin-right: -8px;
    }
  }
}

.close-button {
}

.modal {
  position: fixed;
  top: 10%;
  left: 5%;
  transform: translate(0%, 5%);
}

.scroller {
  overflow-y: scroll;
  overflow-x: hidden;
  width: $appWidth;
  height: 78vh;
  scrollbar-color: red blue;
  scrollbar-width: thin;
  position: relative;

  &::-webkit-scrollbar {
    width: 10px;
  }

  &::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  }

  &::-webkit-scrollbar-thumb {
    background-color: darkgrey;
    outline: 1px solid slategrey;
  }
}

.add-producer,
.explore-button {
  height: 32px;
  font-size: 16px;
  line-height: 32px;
  margin: auto;
  text-align: center;
}

.region-tab-bar {
  height: 40px;
  width: $appWidth;
  display: flex;
}
.region-tab {
  min-width: 50px;
  font-size: 12px;
  line-height: 14px;
  border: 2px solid darkgrey;
  border-radius: 4px 4px 0 0;
  border-bottom: none;
  margin: 2px 4px;
  cursor: pointer;
  padding: 4px;
  text-align: center;
  &.active {
    border-color: black;
  }
}

.debug-button-panel {
  padding: 4px;
  border-radius: 4px;
  border: 1px solid #ccc;
  summary {
    font-weight: bold;
    font-size: 16px;
    user-select: none;
  }
  &[open] {
  }
  .clickable {
    width: 250px;
    display: inline-block;
  }
}

@keyframes myship {
  from {
    top: 100vh;
  }
  to {
    top: -1000px;
  }
}
@-moz-keyframes myship {
  from {
    top: 100vh;
  }
  to {
    top: -1000px;
  }
}
@-webkit-keyframes myship {
  from {
    top: 100vh;
  }
  to {
    top: -1000px;
  }
}

.rocket-ship {
  position: absolute;
  z-index: 100;
  left: 20vw;
  top: 100vh;
  visibility: hidden;
  &.animate {
    visibility: visible;
    animation: myship 10s;
    animation-timing-function: ease-in;
  }
}

